<resources>
    <array name="beel_relation">
        <item>recreation</item>
        <item>live in that area</item>
        <item>fishing</item>
        <item>bird watcher</item>
        <item>tourist</item>
        <item>wildlife enthusiast</item>
        <item>others</item>
    </array>
    <array name="lake_health_water_colour">
        <item>transparent(bottom visible)</item>
        <item>Blue lake water</item>
        <item>green lake water</item>
        <item>brown lake water</item>
    </array>
    <array name="lake_health_problem">
        <item>solid waste dumping</item>
        <item>illegal encroachment</item>
        <item>Dead animal</item>
        <item>Dirty water entering waterbody</item>
        <item>Other</item>
    </array>

    <string name="contact">limknow2020@gmail.com</string>
    <string name="message_type">message/rfc822</string>
    <string name="package_name">com.google.android.gm</string>

    <string name="description">In the southwestern part of Guwahati city lies Deepor Beel,
        the only Ramsar site of Assam. The name is derived from dipa and beel which loosely translates to a wetland inhabited by the elephants.
        The water from  Basistha and Kalamoni rivers feed the wetland.  As a natural storm water reservoir it acts as a buffer to Guwahati city’s flooding problem. \nSurrounded by the Rani and Garbhanga reserve forest this water body supports immense biodiversity. It is a bird watchers delight with around 219 species of bird. Around 70 species of migratory birds from around the world visit this wetland. It has been declared as an Important Bird Area.\nBesides the birds the beel is home and source of food for the microscopic phytoplankton to the majestic elephants.\nIt is an important source of livelihood for the fishermen community living in the nearby villages. Over the last few years this wetland is under severe threat.\n</string>

    <string name="app_name">LimKnow Pilot</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="general_question_one">How much are you willing to pay as entry fees if Deepor beel was an eco-park? (in INR)</string>

    <string name="general_question_two">What is your relation to the beel?</string>

    <string name="general_question_three"> Is there is a lake or wetland in Kamrup that you would love to see on this App ? Tell us more</string>
    <string name="citizen_science_questionaire_guide">You can fill up as many entries you want around deepor beel . But please make sure each entry is from a single location.</string>
    <string name="invasive_species_watch_question_one">Which species do you observe ? </string>

    <string name="invasive_species_watch_question_two">Please click a picture of the plant ( Save the gps data from this picture for us)</string>
    <string name="invasive_species_watch_question_three">How widespread is it ?</string>
    <string name="lake_health_question_one">Do you see any dead fishes nearby?</string>
    <string name="lake_health_question_two">What is the water colour?</string>
    <string name="lake_health_question_three"> Is there any other problem you see ? </string>
    <string name="lake_health_question_four">Do you see a dead animal? Tell us more. </string>

    <string name="privacy_policy_label">Privacy Policy</string>
    <string name="privacy_policy">Beels and Pukhuris built the LimKnow app as an Open Source app. This SERVICE is provided by Beels and Pukhuris at no cost and is intended for use as is.This page is used to inform visitors regarding our policies with the collection, use, and disclosure of Personal Information if anyone decided to use our Service.If you choose to use our Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that we collect is used for providing and improving the Service. We will not use or share your information with anyone except as described in this Privacy Policy.The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at LimKnow unless otherwise defined in this Privacy Policy.</string>

    <string name="Information_Collection_and_Use_label">Information Collection and Use</string>
    <string name="Information_Collection_and_Use">For a better experience, while using our Service, we may require you to provide us with certain personally identifiable information, including but not limited to name, email, gender, age, geolocation, photo. The information that we request will be retained by us and used as described in this privacy policy.The app does use third party services that may collect information used to identify you. The third party services we may use are : Google Play Services, Google Analytics for Firebase and Firebase Crashlytics</string>

    <string name="Log_Data_label">Log Data</string>
    <string name="Log_Data"> We want to inform you that whenever you use our Service, in a case of an error in the app we collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing our Service, the time and date of your use of the Service, and other statistics.</string>

    <string name="Cookies_label">Cookies</string>
    <string name="Cookies"> Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on the internal memory of your device.This Service does not use these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.</string>

    <string name="Service_Provider_label">Service Providers</string>
    <string name="Service_Provider"> We may employ third-party companies and individuals due to the following reasons: To facilitate our Service;To provide the Service on our behalf;To perform Service-related services; orTo assist us in analyzing how our Service is used.We want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.</string>

    <string name="Security_label">Security</string>
    <string name="Security"> We value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and we cannot guarantee its absolute security.</string>

    <string name="Links_to_Other_Sites_label">Links to Other Sites</string>
    <string name="Links_to_Other_Sites"> This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by us. Therefore, we strongly advise you to review the Privacy Policy of these websites. We have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.</string>

    <string name="Children_Privacy_label">Children’s Privacy</string>
    <string name="Children_Privacy">These Services do not address anyone under the age of 13. We do not knowingly collect personally identifiable information from children under 13. In the case we discover that a child under 13 has provided us with personal information, we immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact us so that we will be able to do necessary actions.</string>

    <string name="Changes_to_This_Privacy_Policy_label">Changes to This Privacy Policy</string>
    <string name="Changes_to_This_Privacy_Policy">We may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. We will notify you of any changes by posting the new Privacy Policy on this page. Your use of the app will be deemed an acceptance of the privacy policy existing at that time.This policy is effective as of 2020-10-15</string>

    <string name="Contact_Us_Label">Contact Us</string>
    <string name="Contact_Us">If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us at limknow2020@gmail.com.</string>

</resources>

