<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GeneralCitizenScienceActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="32dp"
        android:paddingTop="40dp"
        android:paddingBottom="40dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:text="@string/general_question_one"/>
        <EditText
            android:layout_width="match_parent"
            android:textColor="@color/colorBlack"
            android:id="@+id/edit_text_fees"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginTop="18dp"
            android:layout_width="match_parent"
            android:textColor="@color/colorBlack"
            android:layout_height="wrap_content"
            android:text="@string/general_question_two"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:text="recreation"
            android:id="@+id/checkbox_1"
            android:textColor="@color/colorBlack"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:textColor="@color/colorBlack"
            android:id="@+id/checkbox_2"
            android:layout_height="wrap_content"
            android:text="live in that area"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:textColor="@color/colorBlack"
            android:id="@+id/checkbox_3"
            android:layout_height="wrap_content"
            android:text="fishing"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:textColor="@color/colorBlack"
            android:layout_height="wrap_content"
            android:id="@+id/checkbox_4"
            android:text="bird watcher"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:textColor="@color/colorBlack"
            android:id="@+id/checkbox_5"
            android:layout_height="wrap_content"
            android:text="tourist"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkbox_6"
            android:text="wildlife enthusiast"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:id="@+id/checkbox_7"
            android:textColor="@color/colorBlack"
            android:layout_height="wrap_content"
            android:text="other"/>
        <EditText
            android:layout_width="match_parent"
            android:textColor="@color/colorBlack"
            android:id="@+id/edit_text_other"
            android:visibility="gone"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="18dp"
            android:text="@string/general_question_three"/>
        <EditText
            android:layout_width="match_parent"
            android:textColor="@color/colorBlack"
            android:id="@+id/edit_text_lake"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/button_general"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background = "@drawable/rounded_corners"
            android:elevation="10dp"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            android:text="Submit"
            android:textColor="#ffffff"
            app:rippleColor="@color/colorPastel" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>