<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LakeHealthActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="32dp"
        android:paddingTop="40dp"
        android:paddingBottom="100dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:text="@string/lake_health_question_one"/>
        <EditText
            android:layout_width="match_parent"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"
            android:id="@+id/edit_text_lake_health_dead_fish"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginTop="18dp"
            android:layout_width="match_parent"
            android:textColor="@color/colorBlack"
            android:layout_height="wrap_content"
            android:text="@string/lake_health_question_two"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radio_group_lake_health">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio_1"
                android:text="transparent(bottom visible)"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio_2"
                android:text="blue lake water"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio_3"
                android:text="green lake water"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio_4"
                android:text="brown lake water"/>
        </RadioGroup>
        <EditText
            android:layout_width="match_parent"
            android:textColor="@color/colorBlack"
            android:visibility="gone"
            android:textSize="14sp"
            android:id="@+id/edit_text_lake_health_other"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="18dp"
            android:text="@string/lake_health_question_three"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:text="solid waste dumping"
            android:id="@+id/lake_health_checkbox_1"
            android:textColor="@color/colorBlack"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:textColor="@color/colorBlack"
            android:id="@+id/lake_health_checkbox_2"
            android:layout_height="wrap_content"
            android:text="illegal encroachment"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:textColor="@color/colorBlack"
            android:id="@+id/lake_health_checkbox_3"
            android:layout_height="wrap_content"
            android:text="dirty water entering waterbody"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:textColor="@color/colorBlack"
            android:layout_height="wrap_content"
            android:id="@+id/lake_health_checkbox_4"
            android:text="dead animal"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_marginStart="32dp"
            android:textColor="@color/colorBlack"
            android:id="@+id/dead_animal_description_label"
            android:text="Can you tell us more about the dead animal affecting the lake?"
            android:layout_height="wrap_content"/>
        <EditText
            android:layout_width="match_parent"
            android:textColor="@color/colorBlack"
            android:inputType="textMultiLine"
            android:textSize="14sp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="32dp"
            android:id="@+id/edit_text_dead_animal_text"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="18dp"
            android:textColor="@color/colorBlack"
            android:layout_marginStart="32dp"
            android:id="@+id/dead_animal_image_label"
            android:text="Can you upload the dead animal image affecting the lake?"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/button_dead_animal_upload"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:background="@drawable/small_button_corners"
            android:elevation="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="32dp"
            android:layout_gravity="left"
            android:paddingHorizontal="8dp"
            android:text="Upload picture (optional)"
            android:textColor="@color/colorBlue"
            android:textSize="12dp"
            app:rippleColor="@color/colorBlue" />

        <ImageView
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:layout_marginTop="5dp"
            android:id="@+id/sample_image_view"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:textColor="@color/colorBlack"
            android:id="@+id/lake_health_checkbox_5"
            android:layout_height="wrap_content"
            android:text="Other"/>
        <EditText
            android:layout_width="match_parent"
            android:textColor="@color/colorBlack"
            android:layout_marginStart="32dp"
            android:id="@+id/edit_text_other_lake_health"
            android:visibility="gone"
            android:textSize="14sp"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/button_lake_health"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background = "@drawable/rounded_corners"
            android:elevation="10dp"
            android:textSize="15dp"
            android:layout_marginTop="10dp"
            android:text="Submit"
            android:textColor="#ffffff"
            app:rippleColor="@color/colorBlue" />
    </LinearLayout>

</ScrollView>